# aws-security-posture-advisor-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_SUCCESS.md  CONTRIBUTING.md  DOCUMENTATION_UPDATED.md  Dockerfile  ENHANCEMENTS.md  LICENSE  PR_READY.md  PR_READY_FINAL.md  PR_TEMPLATE.md  README.md  SECURITY_COMPLIANCE.md  SECURITY_SCAN_COMPLETE.md  code_security_analysis.py  comprehensive_test.py  docker-compose.yml  example_config.json  mcp_client_config.json  minimal_server.py  pyproject.toml  run_all_tests.py  security_recommendations.py  security_review.py  test_functionality.py  test_questions.py  test_server_status.py  usage_example.py  verify_deployment.py
awslabs/: __init__.py
awslabs/aws_security_posture_advisor/: __init__.py  server.py
awslabs/aws_security_posture_advisor/core/: __init__.py
awslabs/aws_security_posture_advisor/core/aws/: __init__.py  auth.py  config.py  guardduty.py  security_hub.py  systems_manager.py
awslabs/aws_security_posture_advisor/core/common/: cache.py  config.py  errors.py  logging.py  middleware.py  models.py  rate_limiter.py  security.py
awslabs/aws_security_posture_advisor/core/intelligence/: __init__.py  compliance.py  remediation.py  risk_correlation.py
awslabs/aws_security_posture_advisor/core/kb/: __init__.py
docs/: API.md  SECURITY.md  TROUBLESHOOTING.md
examples/: mcp_client_test.py
infra/: README.md
infra/cdk/: README.md  app.py  cdk.json  stack.py
infra/cloudformation/: README.md  template.yaml
infra/terraform/: README.md  main.tf
scripts/: assess_security.py  comprehensive_security_audit.py  direct_test.py  real_assessment.py  security_recommendations_report.py  test_assessment.py  test_server.py
tests/: __init__.py  conftest.py  test_cache.py  test_errors.py  test_intelligence.py  test_models.py  test_security.py
